--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -4,8 +4,8 @@
 name: artifact-image-complete-matrix
 
 on:
-  schedule:
-    - cron: '0 1 * * *' # Scheduled runs every day at 2am UTC
+  #schedule:
+  #  - cron: '0 1 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
     inputs:
       skipImages:
