add key listing

--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -1,4 +1,3 @@
-
 # template file: 050.single_header.yaml
 
 #name: "Build All Artifacts/Images"
@@ -2523,6 +2522,9 @@ jobs:
           echo "keyid:       ${{ steps.import_gpg.outputs.keyid }}"
           echo "name:        ${{ steps.import_gpg.outputs.name }}"
           echo "email:       ${{ steps.import_gpg.outputs.email }}"
+          
+      - name: List loaded keys keys
+        run: gpg -K || true
 
       - name: Prepare the reprepro scripts
         id: prepare-scripts-reprepro
